[package]
name = "datafusion-query-proxy"
version = "0.0.1"
authors = ["jiangzhx <jianghzhx@gmail.com>"]
edition = "2018"
description = "Write servers that speak (PostgreSQL|Mysql)'s wire protocol"
license = "MIT"
repository = "https://github.com/jiangzhx/datafusion-query-proxy"

[dependencies]
tokio = { version = "1.18", features = [ "net", "rt-multi-thread", "macros", "io-util", "io-std" ] }
tokio-util = { version = "0.7", features = [ "codec" ] }
thiserror = "1.0"
bytes = "1.0"
futures = "0.3"
sqlparser = "0.15"
async-trait = "0.1"
chrono = "0.4.19"
anyhow = "1"
datafusion = { git = "https://github.com/argoengine/arrow-datafusion.git", branch="master"}
msql-srv = "0.9.6"
mysql = "22.0.0"

[dev-dependencies]
tokio-postgres = { version =  "0.7", features = [ "with-chrono-0_4" ] }